--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
         function menuToggle(){
             if(menuItems.style.maxHeight=="0px"){
-                menuItems.style.maxHeight="200px    x";
+                menuItems.style.maxHeight="200px";
             }
             else{
                 menuItems.style.maxHeight="0px"
