--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <div class="header-menu">
                         <ul id="menuItems">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Discover</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#discover">Discover</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <i class="gg-chevron-double-down-r" id="menu-icon" onclick="menuToggle();"></i>
                     </div>
@@ -134,7 +134,7 @@
     <!-- Portfolio Finish-->
 
     <!--DISCOVER START-->
-    <section id="about">
+    <section id="discover">
         <div class="about">
             <div class="container">
                 <div class="about-title">
